'Render region' doesn't account for different aspect ratio #73954

Closed
opened 2020-02-18 00:52:28 +01:00 by Seth · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7

Short description of error
'Render region' doesn't account for different aspect ratio. There are clipping issues that mess up the viewport render

Exact steps for others to reproduce the error
Open the attached blend and set the viewport to rendered mode. Toggle 'render region' on and off to see the issue come and go.

Here's a before and after (render region off, then on, with aspect settings visible)
aspectClippingRROff.png
aspectClippingRROn.png

aspectClipping.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` **Short description of error** 'Render region' doesn't account for different aspect ratio. There are clipping issues that mess up the viewport render **Exact steps for others to reproduce the error** Open the attached blend and set the viewport to rendered mode. Toggle 'render region' on and off to see the issue come and go. Here's a before and after (render region off, then on, with aspect settings visible) ![aspectClippingRROff.png](https://archive.blender.org/developer/F8346132/aspectClippingRROff.png) ![aspectClippingRROn.png](https://archive.blender.org/developer/F8346134/aspectClippingRROn.png) [aspectClipping.blend](https://archive.blender.org/developer/F8346110/aspectClipping.blend)
Author

Added subscriber: @VirtusH

Added subscriber: @VirtusH

Added subscribers: @brecht, @ideasman42

Added subscribers: @brecht, @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Cycles currently ignores aspect from what I can see, however there used to be support for this, from reading #48526 (Render doesn't look like Camera View).

@brecht is this known issue?

Cycles currently ignores aspect from what I can see, however there used to be support for this, from reading #48526 (Render doesn't look like Camera View). @brecht is this known issue?

This issue was referenced by blender/cycles@49766f706b

This issue was referenced by blender/cycles@49766f706b2783c88f53aa4f54d3cb26ba1e5f4b

This issue was referenced by 79f99becaf

This issue was referenced by 79f99becafa3e2a2d7e0b6779961a4e2b58b371e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-02-18 10:11:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73954
No description provided.