Fix T73954: Cycles viewport render from camera not respecting aspect ratio